--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,559 @@
+/** Type styles */
 body {
-  font-family: "Avenir Next";
-  font-size: 15px;
-  padding: 40px;
+  margin: 0;
+  background: #ffffff;
+  font: 16px "Proxima Nova", sans-serif;
+  font-weight: 400;
+  color: #222222;
+  line-height: 1.4;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 27px;
+}
+h2 {
+  margin: 0 0 35px;
+  padding: 0 0 3px;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+  border-bottom: solid 2px #222222;
+  display: inline-block;
+}
+h3 {
+  font-size: 16px;
+  font-weight: 500;
+}
+h4 {
+  font-family: "Futura PT", sans-serif;
+  font-size: 24px;
+  color: #000000;
+  line-height: 28px;
+  font-weight: 100;
+  margin-bottom: 15px;
+  text-transform: uppercase;
 }
 
-h1 {
+h5 {
+  font-family: "Futura PT", sans-serif;
+  font-size: 18px;
+  margin-bottom: 15px;
+  color: #000000;
+  line-height: 28px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 
+p {
+  margin-bottom: 35px;
+  word-wrap: break-word;
+}
+
+.text-section p {
+  margin-bottom: 16px;
+}
+.text-section p:last-child {
+  margin-bottom: 0;
+}
+a {
+  color: #9E36FF;
+}
+
+a:hover {
+  color: #9E36FF;
+  text-decoration: underline;
+}
+
+b {
+  font-weight: 500;
+}
+
+.section p:last-child,
+.section h4:last-child,
+.section ul:last-child,
+.section li:last-child {
+  margin-bottom: 0;
+}
+.section ul {
+  margin-bottom: 35px;
+  font-weight: 300;
+}
+.section ul li {
+  margin: 0 0 9px -20px;
+  line-height: 1.4;
+}
+h3 + ul {
+  margin-top: 16px;
+}
+/** Page styles */
+.container-fluid > .row {
+  padding: 0 60px;
+}
+@media (max-width: 767px) {
+  .container-fluid > .row {
+    padding: 0 8px;
+  }
+}
+.container-fluid > .row.header {
+  background: #ffffff;
+  font-size: 13px;
+}
+.container-fluid > .row.header .navbar {
+  min-height: 75px;
+  margin: 0;
+  border: none;
+}
+.container-fluid > .row.header .navbar .navbar-brand {
+  height: auto;
+  margin: 30px 0 0;
+  padding: 0;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+
+.container-fluid > .row.header .navbar .navbar-brand .thin-light {
+  font-weight: 100;
+  padding: 0px 18px 0px 8px;
+  color: #D7D8D9;
+}
+
+@media (max-width: 767px) {
+  .container-fluid > .row.header .navbar .navbar-brand .thin-light {
+    padding: 0px 6px 0px 0px;
+    margin-left: -8px;
+  }
+}
+
+.container-fluid > .row.header .navbar .navbar-brand .thin {
+  font-weight: 100;
+  text-transform: none;
+  color: #70787F;
+}
+
+.navbar-brand a:hover {
+  text-decoration: none;
+}
+
+.container-fluid > .row.header .navbar a {
+  margin: 31px 16px 24px 16px;
+  padding: 0px;
+  color: #222222;
+}
+.container-fluid > .row.header .navbar a:hover {
+  background: none;
+  color: #9E36FF;
+}
+.container-fluid > .row.header .navbar a:focus {
+  background-color: transparent;
+}
+.container-fluid > .row.header .navbar li a {
+  font-family: "Futura PT", sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+.container-fluid > .row.header .navbar li.active a {
+  font-weight: 500;
+  border-bottom: 2px solid #222222;
+  color: #222222;
+  padding-bottom: 0px;
+}
+
+@media (max-width: 767px) {
+  .container-fluid > .row.header .navbar li.active a {
+    border-bottom: none;
+  }
+}
+
+.container-fluid > .row.header .navbar .icon-bar {
+  background: #222222;
+}
+@media (max-width: 767px) {
+  .container-fluid > .row.header .navbar {
+    min-height: 55px;
+  }
+  .container-fluid > .row.header .navbar .navbar-brand {
+    margin: 17px 0 0;
+    padding: 0;
+  }
+  .container-fluid > .row.header .navbar .navbar-toggle {
+    margin: 21px 0 0;
+    padding: 0;
+    border-radius: 0;
+  }
+  .container-fluid > .row.header .navbar .navbar-nav {
+    margin-bottom: 11px;
+    padding-top: 4px;
+  }
+
+  .container-fluid > .row.header .navbar .navbar-nav li a {
+    padding: 0;
+  }
+}
+
+  .container-fluid > .row.header.inverse  {
+    background: #000000;
+  }
+
+  .container-fluid > .row.header.inverse .navbar .navbar-brand {
+    color: #FFFFFF;
+    letter-spacing: 0.5px;
+  }
+
+  .container-fluid > .row.header.inverse  .navbar .navbar-brand .thin-light {
+    color: #FFFFFF;
+    opacity: 0.4;
+  }
+
+  .container-fluid > .row.header.inverse  .navbar .navbar-brand .thin {
+    color: #FFFFFF;
+    opacity: 0.7;
+  }
+
+  .container-fluid > .row.header.inverse  .navbar a {
+    color: #FFFFFF;
+  }
+
+  .container-fluid > .row.header.inverse .navbar a:hover {
+    color: #C280FF;
+  }
+
+  .container-fluid > .row.header.inverse  .navbar li.active a {
+    border-bottom: 2px solid #FFFFFF;
+    color: #FFFFFF;
+  }
+
+  .container-fluid > .row.header.inverse  .navbar .icon-bar {
+    background: #FFFFFF;
+  }
+
+.container-fluid .section {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: #FFFFFF;
+}
+@media (max-width: 767px) {
+  .container-fluid .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+.container-fluid > footer {
+  background: #216796;
+  color: #ffffff;
+}
+.container-fluid > footer p,
+.container-fluid > footer .social {
+  padding: 15px 0 30px;
+}
+.container-fluid > footer p {
+  font-size: 13px;
+  border-top: solid 1px #84C7FF;
+}
+.container-fluid > footer .patent {
+  margin-left: 10px;
+  padding-left: 10px;
+  border-left: solid 1px rgba(255, 255, 255, 0.5);
+  color: #ffffff;
+}
+.container-fluid > footer a {
+  margin-left: 10px;
+  padding-left: 10px;
+  border-left: solid 1px rgba(255, 255, 255, 0.5);
+  color: #84C7FF;
+}
+.container-fluid > footer a:hover {
+  text-decoration: none;
+}
+.container-fluid > footer .social {
+  float: right;
+}
+.container-fluid > footer .social a {
+  margin-left: 0;
+  border-left: none;
+  color: #84C7FF;
+}
+/** Button styles */
+.btn {
+  padding: 7px 12px 6px;
+  background: none;
+  border-radius: 3px;
+  border: solid 2px #222222;
+  font-size: 11px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #222222;
+}
+.btn:hover,
+.btn:active {
+  border-color: #219396;
+  background: none;
+  color: #219396;
+  -webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+}
+.btn:active {
+  border-color: #0B6F72;
+  color: #0B6F72;
+}
+.btn:focus {
+  outline: none;
+}
+.btn-primary {
+  background: #222222;
+  color: #FFFFFF;
+}
+.btn-primary:hover,
+.btn-primary:active {
+  background: #219396;
+  border-color: #219396;
+  color: #FFFFFF;
+}
+.btn-primary:active {
+  background: #0B6F72;
+  border-color: #0B6F72;
+}
+/** Modal styles */
+.modal-backdrop {
+  background: #114C4D;
+  opacity: .75 ! important;
+}
+.modal-content {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+}
+.modal-content label {
+  font-weight: 400;
+}
+/** Mixins **/
+.cover-section {
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  content: '';
+}
+/** Sections **/
+.hero:before {
+  background-image: url(../assets/Ampersand1.png);
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  content: '';
+  background-position: 50% 35%;
+}
+@media (max-width: 767px) {
+  .hero:before {
+    background-position: 50% 35%;
+  }
+}
+.hero {
+  padding-top: 0;
+  padding-bottom: 0;
+  position: relative;
+  color: #fff;
+  text-shadow: 0 1px 2px rgba(10, 42, 108, 0.99);
+}
+.section.hero {
+  padding: 260px 0 270px;
+  text-align: center;
+  color: #ffffff;
+  background: #219396;
+}
+
+.section.hero h2 {
+  border-color: #ffffff;
+}
+.section.hero .btn {
+  border: none;
+  color: #ffffff;
+  border-radius: 2px;
+}
+.section.hero .btn-primary {
+  color: #219396;
+}
+.section.hero .btn-primary {
+  background: #ffffff;
+  color: #219396;
+}
+.section.hero .btn:hover,
+.section.hero .btn:active {
+  opacity: 0.7;
+}
+@media (max-width: 767px) {
+  .section.hero {
+    padding: 140px 0;
+  }
+}
+.section.hero h1 {
+  margin-bottom: 40px;
+  font-size: 80px;
+  font-family: proxima-nova, sans-serif;
+  font-style: normal;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  margin-top: -130px;
+}
+@media (max-width: 767px) {
+  .section.hero h1 {
+    font-size: 32px;
+    margin-top: -25px;
+  }
+}
+.section.hero h2 {
+  margin-bottom: 32px;
+  padding: 0;
+  border: none;
+  text-transform: none;
+  letter-spacing: 0;
+  font-size: 20px;
+  width: 300px;
+  font-weight: 500;
+}
+@media (max-width: 767px) {
+  .section.hero h2 {
+    margin-bottom: 18px;
+    font-size: 18px;
+    width: 250px;
+  }
+}
+.section.hero .calls-to-action .btn {
+  margin: 10px 10px;
+  text-shadow: none;
+  color: #FF0A9A;
+}
+.section.hero .calls-to-action .btn:hover {
+  margin: 10px 10px;
+  text-shadow: none;
+  background-color: #FF0A9A;
+  color: #FFFFFF;
+  opacity: 1;
+
+}
+@media (max-width: 767px) {
+  .section.hero .calls-to-action {
+    top: -20px;
+    right: 40;
+  }
+
+}
+
+/********************************* Work Projects *********************************/
+
+.vertical-align {
+  letter-spacing: -4px;
+  font-size: 0;
+}
+
+.vertical-align .col-sm-4 {
+  vertical-align: middle;
+  display: inline-block;
+  letter-spacing: 0;
+  font-size: 14px;
+  float: none;
+}
+
+a.project-item img:hover {
+  opacity: 0.85;
+  transition: all 0.2s;
+}
+
+.project-title {
+  color: #FFFFFF;
+  position: absolute;
+  top: 20%;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 300;
+  color: #FFFFFF;
+  line-height: 28px;
+  text-transform: uppercase;
+  text-align: center;
+  width: 100%;
+  left: 0;
+}
+
+
+@media (max-width: 992px) {
+  .project-title {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .project-title {
+    font-size: 24px;
+  }
+}
+
+/********************************* Footer *********************************/
+
+footer.row {
+  background-color: #FFFFFF;
+  color: #9E968E;
+}
+footer.row a {
+  color: #222222;
+}
+footer.row a:hover {
+  color: #0B6F72;
+}
+footer.row p {
+  border-top: 1px solid #D3CEC9;
+}
+footer.row .patent {
+  color: #9E968E;
+  border-left: solid 1px #D3CEC9;
+}
+footer.row .privacy {
+  border-left: solid 1px #D3CEC9;
+}
+footer.row .social a {
+  color: #222222;
+}
+footer.row .social a:hover {
+  color: #0B6F72;
+}
+
+/********************************* Work Pages *********************************/
+
+.embed-responsive {
+  margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .img-responsive {
+    margin-bottom: 40px;
+  }
 }
