--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,12 @@ h3 + ul {
   letter-spacing: 0.5px;
 }
 
+@media (max-width: 767px) {
+  .container-fluid > .row.header .navbar .navbar-brand a {
+    margin-left: 0px;
+  }
+}
+
 .container-fluid > .row.header .navbar .navbar-brand .thin-light {
   font-weight: 100;
   padding: 0px 18px 0px 8px;
@@ -163,6 +169,7 @@ h3 + ul {
   text-transform: uppercase;
   font-weight: 300;
 }
+
 .container-fluid > .row.header .navbar li.active a {
   font-weight: 500;
   border-bottom: 2px solid #222222;
