Change hero BG color

--- a/styles.css
+++ b/styles.css
@@ -395,7 +395,7 @@ h3 + ul {
   padding: 260px 0 270px;
   text-align: center;
   color: #ffffff;
-  background: ##0A0A30;
+  background: #0A0A30;
 }
 
 .section.hero h2 {
