--- a/styles.css
+++ b/styles.css
@@ -405,10 +405,11 @@ h3 + ul {
   text-shadow: 0 1px 2px rgba(10, 42, 108, 0.99);
 }
 .section.hero {
-  padding: 260px 0 270px;
+  padding: 270px 0 310px;
   text-align: center;
   color: #ffffff;
   background: #0A0A30;
+  position: relative;
 }
 
 .section.hero h2 {
@@ -487,7 +488,18 @@ h3 + ul {
     top: -20px;
     right: 40;
   }
+}
 
+.sloan {
+  position: absolute;
+    width: 15%;
+    top: 8%;
+    left: 12%;
+}
+
+  .sloan-svg {
+    width: 100%;
+  }
 }
 
 /********************************* Work Projects *********************************/
