Commenting out style

--- a/styles.css
+++ b/styles.css
@@ -490,7 +490,7 @@ h3 + ul {
   }
 }
 
-.sloan {
+/*.sloan {
   position: absolute;
     width: 15%;
     top: 8%;
@@ -499,7 +499,7 @@ h3 + ul {
 
   .sloan-svg {
     width: 100%;
-  }
+  }*/
 }
 
 /********************************* Work Projects *********************************/
