--- a/styles.css
+++ b/styles.css
@@ -490,7 +490,7 @@ h3 + ul {
   }
 }
 
-/*.sloan {
+.sloan {
   position: absolute;
     width: 15%;
     top: 8%;
@@ -499,7 +499,7 @@ h3 + ul {
 
   .sloan-svg {
     width: 100%;
-  }*/
+  }
 }
 
 /********************************* Work Projects *********************************/
@@ -514,7 +514,7 @@ h3 + ul {
   display: inline-block;
   letter-spacing: 0;
   font-size: 14px;
-  float: none;
+  float: left;
 }
 
 a.project-item img:hover {
