--- a/styles.css
+++ b/styles.css
@@ -419,10 +419,35 @@ h3 + ul {
   opacity: .9;
 }
 
+.banner p.desktop {
+  display: block;
+}
+
+.banner p.mobile {
+  display: none;
+}
+
 @media (max-width: 767px) {
-  .banner {
+  .banner p.desktop {
     display: none;
   }
+
+  .banner p.mobile {
+    display: block;
+  }
+  .banner .text-center {
+      padding: 0px 2px;
+    }
+  .banner p.mobile .btn {
+    background-color: #000;
+    color: #fff;
+    margin-top: 5px;
+  }
+
+  .banner p.mobile .btn:active, .btn:hover {
+    background-color: #090543;
+    border: 2px solid #090543;
+}
 }
 
 
@@ -466,7 +491,7 @@ h3 + ul {
   text-shadow: 0 1px 2px rgba(10, 42, 108, 0.99);
 }
 .section.hero {
-  padding: 270px 0 310px;
+  padding: 200px 0 310px;
   text-align: center;
   color: #ffffff;
   background: #0A0A30;
